Create the frame of the BE and FE part of the searching tool (Java 25 BE, JavaFX FE, app module) and the scraper module.